Nicer way of getting from a File to a URL.